--- a/Code/GraphMol/MolStandardize/Wrap/CMakeLists.txt
+++ b/Code/GraphMol/MolStandardize/Wrap/CMakeLists.txt
@@ -1,3 +1,4 @@
+remove_definitions(-DRDKIT_MOLSTANDARDIZE_BUILD)
 rdkit_python_extension(rdMolStandardize rdMolStandardize.cpp Validate.cpp
 	Charge.cpp Fragment.cpp Normalize.cpp Metal.cpp
                        DEST Chem/MolStandardize
