attempt to resolve travis failures
this is aimed at the intermittent problems with apt-get

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,8 @@ addons:
          - libc++-dev
 
 before_install:
- # download and install miniconda
+ - sudo sed -i '/precedence ::ffff:0:0\/96 100/s/^#//g' /etc/gai.conf
+# download and install miniconda
  - echo "*************************************************"
  - echo "Building for $TRAVIS_OS_NAME"
  - echo "         for Python $CONDA_PYTHON_VERSION"
