switch the catch2 handling to a normal download the externalproject thing was not actually working on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ set(RDKit_ExternalDir "${CMAKE_CURRENT_SOURCE_DIR}/External")
 add_subdirectory(${RDKit_ExternalDir}/catch)
 
 
-include_directories(${CATCH_INCLUDE_DIR} ${COMMON_INCLUDES})
+# include_directories(${CATCH_INCLUDE_DIR} ${COMMON_INCLUDES})
 
 if(RDK_INSTALL_INTREE)
   set(RDKit_BinDir "${CMAKE_SOURCE_DIR}/bin")
