--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,8 +105,8 @@ set(RDKit_ExternalDir "${CMAKE_CURRENT_SOURCE_DIR}/External")
 
 #include catch
 add_subdirectory(${RDKit_ExternalDir}/catch)
-include_directories(${CATCH_INCLUDE_DIR})
-
+target_include_directories(rdkit_base INTERFACE ${CATCH_INCLUDE_DIR})
+message("CATCH: ${CATCH_INCLUDE_DIR}")
 
 if(RDK_INSTALL_INTREE)
   set(RDKit_BinDir "${CMAKE_SOURCE_DIR}/bin")
