--- a/External/catch/CMakeLists.txt
+++ b/External/catch/CMakeLists.txt
@@ -1,27 +1,20 @@
-project(catch_builder CXX)
+add_custom_target(catch ALL)
 
-# Includes Catch in the project:
-include(ExternalProject)
-
-if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/catch")
-  ExternalProject_Add(
-      catch
-      SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/catch
-      GIT_REPOSITORY https://github.com/philsquared/Catch.git
-      GIT_TAG "v2.1.1"
-      TIMEOUT 10
-      UPDATE_COMMAND ""
-      CONFIGURE_COMMAND ""
-      BUILD_COMMAND ""
-      INSTALL_COMMAND ""
-      LOG_DOWNLOAD ON
-     )
-
-  # Expose required variable (CATCH_INCLUDE_DIR) to parent scope
-  ExternalProject_Get_Property(catch source_dir)
+if(NOT DEFINED CATCH_DIR)
+  set(CATCH_DIR "${CMAKE_CURRENT_SOURCE_DIR}/catch")
+endif()
+if(NOT EXISTS "${CATCH_DIR}/single_include")
+    include(RDKitUtils)
+    set(RELEASE_NO "2.1.2")
+    downloadAndCheckMD5("https://github.com/catchorg/Catch2/archive/v${RELEASE_NO}.tar.gz"
+          "${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz"
+          "4c5740d7446d9b4e3735dcff0951aaca")
+    execute_process(COMMAND ${CMAKE_COMMAND} -E tar zxf
+      ${CMAKE_CURRENT_SOURCE_DIR}/master.tar.gz
+      WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+    file(RENAME "Catch2-${RELEASE_NO}" "${CATCH_DIR}")
 else()
-  set(source_dir "${CMAKE_CURRENT_SOURCE_DIR}/catch")
+  message("-- Found Catch2 source in ${CATCH_DIR}")
 endif()
 
-set(CATCH_MODULE_PATH ${source_dir} CACHE INTERNAL "location of Catch")
-set(CATCH_INCLUDE_DIR ${CATCH_MODULE_PATH}/single_include CACHE INTERNAL "Path to include folder for Catch")
+set(CATCH_INCLUDE_DIR "${CATCH_DIR}/single_include" PARENT_SCOPE)
