--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,10 +90,10 @@ set(RDK_PYTHON_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/rdkit")
 
 #-------
 # Config variables:
-set(RDKit_Year "2018")
-set(RDKit_Month "09")
+set(RDKit_Year "2019")
+set(RDKit_Month "03")
 set(RDKit_Revision "1")
-set(RDKit_RevisionModifier "")
+set(RDKit_RevisionModifier "dev1")
 set(RDKit_ABI "1")
 
 # we need an integer version of the month later, so remove the zero padding
